rails_root/public/stylesheets/ohfy.css
html {
  background: none repeat scroll 0 0 transparent;
}

body {
	background: url("/images/blackboard.jpg") no-repeat fixed 50% 0 #000000;
	color: #FFFFFF;
}

a {
	color: #FFFFFF;
}

a:hover {
	text-shadow: 0 0 10px #00CCFF !important;
}

#messages {
	margin-top: 40px;
	text-align: right;
	font-size: smaller;
}

#container {
	font-family: fantasy;
	margin: 0 auto;
	overflow: hidden;
	width: 800px;
}

#container h1 {
	float: left;
	margin-top: 0;
	font-family: cursive;
}

#container h1 a {
	text-decoration: none;
	text-shadow: 0 0 6px #000000;
}

.menu {
	font-size: 15px;
	text-align: right;
	height: 30px;
	padding-top: 5px;
	margin-bottom: 20px;
}

.menu a {
	text-decoration: none;
	text-shadow: 0 0 2px #000000;
}

.ohfy_calendar {
	height: 480px;
}

.ohfy_calendar .date {
	font-size: 25px;	
	text-align: center;
	text-shadow: 0 0 5px #000000;
	vertical-align: middle;
	float: left;
	height: 94px;
	width: 103px;
}

.ohfy_calendar .date.actable {
	cursor: pointer;
}

.ohfy_calendar .date .month_title {
    font-size: 20px;
    height: 20px;
    margin-bottom: 5px;
    margin-left: 20px;
    margin-top: 10px;
    text-align: left;
}

.ohfy_calendar .header {
	height: 30px;
	font-size: 20px;
}

.ohfy_calendar .unknown {
	background-image: url("/images/grid-unknown.png");
}

.ohfy_calendar .bad {
	background-image: url("/images/grid-bad.png");
}

.ohfy_calendar .good {
	background-image: url("/images/grid-good.png");
}

.ohfy_calendar .great {
	background-image: url("/images/grid-great.png");
}

.intro {
	float: left;
	width: 350px;
	margin-right: 40px;
	font-family: cursive;
	font-size: 20px;
	color: #FFFFFF;
}

.intro ul li {
	list-style: circle;
}

.sticker {
	margin: 0 auto;
	overflow: hidden;
	width: 410px;
	height: 406px;
	background-image: url("/images/sticker.png");
	color: #000000;
}

.sticker h2 {
	margin-top: 10px;
	margin-bottom: 5px;
}

.sticker h3 {
	margin-top: 20px;
	margin-bottom: 5px;
	font-size: 20px;
}

.sticker h4 {
	margin-top: 10px;
	margin-bottom: 0px;
}

.sticker a {
	color: #000000;
}

.sticker .content {
	margin-top: 35px;
	margin-left: 40px;
	margin-right: 35px;
}

.sticker input[type="text"], .sticker input[type="password"] {
	margin-left: 15px;
	background: #FBF181;
	border: none;
	border-bottom: dashed 1px;
	font-family: fantasy;
	font-size: 20px;
}

input[type="submit"] {
	font-family: fantasy;
	font-size: 16px;
	float: left;
	margin-right: 50px;
}

.sticker .smaller input {
	font-size: 15px;
}

.sticker .field_with_errors {
	color: red;
}

.sticker .field_with_errors input {
	border: dashed 1px red;
}

.sticker .fyi {
	font-style: italic;
	font-size: smaller;
}

.sticker .row {
	margin-bottom: 10px;
}

.sticker .row .column_left {
	width: 20%;
	float: left;
	text-align: right;
	padding-top: 10px;
}

.sticker .row .column_right {

}

#execution_sticker {
	width: 388px;
	height: 328px;
	position: absolute;
	top: 25%;
	left: 35%;
	text-shadow: 0 0 5px black;
}

#execution_sticker.unknown {
	background-image: url("/images/big-grid-unknown.png");
}

#execution_sticker.bad {
	background-image: url("/images/big-grid-unknown.png");
}

#execution_sticker.good {
	background-image: url("/images/big-grid-good.png");
}

#execution_sticker.great {
	background-image: url("/images/big-grid-great.png");
}

#execution_sticker .close_button {
	width: 38px;
	height: 37px;
	position: absolute;
	top: 20px;
	left: 330px;
	background-image: url("/images/cross-button.png");
	cursor: pointer;
}

#execution_sticker h3 {
	margin-bottom: 0px;
	margin-left: 30px;
}

#execution_sticker ul {
	margin-top: 10px;
	margin-left: 30px;
	list-style: none;
}

#execution_sticker li {
	width: 228px;
	height: 61px;
	background-image: url("/images/big-button.png");
	margin-bottom: 10px;
	padding-left: 20px;
	padding-top: 10px;
	font-size: 20px;
	font-style: bold;
	cursor: pointer;
}

#execution_sticker li.acted {
	background-image: url("/images/big-button-acted.png");
}

#execution_sticker li.not_acted {
	background-image: url("/images/big-button-not-acted.png");
}

.activity_buttons {
	float: left;
}

.share_buttons {
	overflow: hidden;
	width: 48px;
}

ul.plans {
	list-style: none;
	color: #444444;
}

ul.plans li {
	width: 320px;
	height: 234px;
	margin-left: 30px;
	margin-bottom: 20px;
	background-image: url("/images/card_small.png");
	float: left;
}

ul.plans .plan_card {
	margin-left: 20px;
	font-size: 20px;
}

ul.plans .plan_card h4 {
	padding-top: 10px;
	margin-top: 0px;
}

ul.plans .plan_card a {
	color: black;
}

ul.plans .plan_card form {
	float: left;
	width: 60px;
}

ul.plans input[type="submit"] {
	margin-left: 180px;
}

